[metadata]
name = changyou
version = 1.0.0
author = fatelei
author_email = fatelei@gmail.com
description = changyou api client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fatelei/changyou_api
project_urls =
    Bug Tracker = https://github.com/fatelei/changyou_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src